tdf#125180 - Don't convert error type parameters to request type

If a particular parameter type is requested during the
construction of a parameter list, don't convert error
type parameters to avoid implicit casting to the
specified data type and value of the method.

Change-Id: Ia413b2996d7d1feecedc1dfefaf6baf0fd9d917e